# junior-bank

./: .gitignore  .replit  Makefile  PROMPT.md  README.md  build.sh  replit.nix
backend/: database.py  main.py  models.py  pyproject.toml  schemas.py
backend/alembic/: env.py
backend/alembic/versions/: 21de50263b2c_add_last_interest_calculation_to_account.py
frontend/: .env  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.tsx
frontend/src/components/: Dashboard.css  Dashboard.tsx  Login.css  Login.tsx  Settings.css  Settings.tsx  Signup.css  Signup.tsx  TransactionModal.css  TransactionModal.tsx
frontend/src/styles/: global.css
